# msi-coolerboost

./: .dockerignore  .gitignore  AGENTS.md  AI.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.runtime  GUIDE.md  PKGBUILD  README.md  SECURITY.md  docker-compose.yml  install.sh  msi-coolerboost.desktop
.cargo/: config.toml
.github/workflows/: aur.yml  rust.yml
src/: config.rs  lib.rs  main.rs  utils.rs
src/commands/: mod.rs  ping.rs  votekick.rs
src/polls/: mod.rs  votekick.rs
