[package]
name = "streamocracy"
version = "0.1.0"
edition = "2024"
authors = ["Xodium"]
description = "A simple Discord bot with a single purpose"

[[bin]]
name = "streamocracy"
path = "src/main.rs"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenvy = "0.15"

[profile.release]
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
