[package]
name = "msi-coolerboost"
version = "1.0.0"
edition = "2021"

[dependencies]
tray-icon = "0.19"
winit = "0.30"
notify-rust = "4"
regex = "1"
image = "0.25"
gtk = { version = "0.18", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[profile.release]
opt-level = 3
lto = true
